# voxels

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/shader/: test-fragment.glsl  test-vertex.glsl
include/: Voxel.hpp  VoxelChunk.hpp
src/: Main.cpp  VoxelChunk.cpp
